--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "start": "npm run develop",
+    "start": "yarn develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
     "gatsby": "^2.24.79",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^5.2.0"
@@ -48,6 +49,9 @@
     }
   },
   "lint-staged": {
-    "*.js": ["eslint --cache --fix", "stylelint --cache"]
+    "*.js": [
+      "eslint --cache --fix",
+      "stylelint --cache"
+    ]
   }
 }
