--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "dotenv": "^8.2.0",
     "gatsby": "^2.24.79",
     "gatsby-image": "^2.4.21",
+    "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-styled-components": "^3.3.14",
     "gatsby-source-sanity": "^6.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
     "styled-components": "^5.2.0",
     "styled-reset": "^4.2.3"
