--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-styled-components": "^3.3.14",
+    "gatsby-source-filesystem": "^2.3.37",
     "gatsby-source-sanity": "^6.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
