--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,5 +8,5 @@ jobs:
       - checkout
       - run: yarn install
       - run: yarn build
-      - run: sudio yarn global add @lhci/cli
+      - run: sudo yarn global add @lhci/cli
       - run: lhci autorun
