--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,15 +2,11 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node
+      - image: circleci/node:10.16-browsers
     working_directory: ~/portfolio
     steps:
       - checkout
       - run: yarn install
       - run: yarn build
       - run: sudo yarn global add @lhci/cli
-      - browser-tools/installchrome
-      - browser-tools/install-chromedriver
       - run: lhci autorun
-orbs:
-  browser-tools: circleci/browser-tools@latest
