--- a/.github/workflows/lhci.yml
+++ b/.github/workflows/lhci.yml
@@ -12,13 +12,13 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 10.x
-      - name: yarn install, build
+      - name: npm install, build
         run: |
-          yarn install
-          yarn build
+          npm install
+          npm run build
       - name: run Lighthouse CI
         run: |
-          yarn global add @lhci/cli
+          npm install -g @lhci/cli@0.6.x
           lhci autorun
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
