--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^3.11.0",
     "styled-components": "^5.2.0",
     "styled-reset": "^4.2.3"
   },
@@ -43,6 +42,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.13",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.2",
     "prettier": "^2.1.2",
