--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-offline": "^3.2.38",
     "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-robots-txt": "^1.5.3",
+    "gatsby-plugin-sitemap": "^2.5.0",
     "gatsby-plugin-styled-components": "^3.3.14",
     "gatsby-source-filesystem": "^2.3.37",
     "gatsby-source-sanity": "^6.0.4",
