--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "gatsby": "^2.25.3",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-offline": "^3.2.38",
+    "gatsby-plugin-preact": "^4.0.16",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-robots-txt": "^1.5.3",
     "gatsby-plugin-sitemap": "^2.5.0",
     "gatsby-plugin-styled-components": "^3.3.14",
     "gatsby-source-filesystem": "^2.3.37",
     "gatsby-source-sanity": "^6.0.4",
+    "preact": "^10.5.5",
+    "preact-render-to-string": "^5.1.11",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
