--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@loadable/babel-plugin": "^5.13.2",
     "@loadable/component": "^5.14.1",
     "@sanity/block-content-to-react": "^2.0.7",
     "dotenv": "^8.2.0",
     "gatsby": "^2.25.3",
     "gatsby-image": "^2.4.21",
+    "gatsby-plugin-no-javascript": "^2.0.5",
     "gatsby-plugin-offline": "^3.2.38",
     "gatsby-plugin-preact": "^4.0.16",
     "gatsby-plugin-react-helmet": "^3.3.14",
@@ -50,6 +52,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "babel-preset-gatsby": "^0.5.16",
     "eslint": "^7.12.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.14.0",
