--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^8.2.0",
     "gatsby": "^2.25.3",
     "gatsby-image": "^2.4.21",
+    "gatsby-plugin-netlify-headers": "^1.0.1",
     "gatsby-plugin-offline": "^3.2.38",
     "gatsby-plugin-preact": "^4.0.16",
     "gatsby-plugin-react-helmet": "^3.3.14",
