--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
     "email": "hello@ethang.email",
     "url": "https://github.com/eglove/portfolio/issues"
   },
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "maintained node versions"
+  ],
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
     "start": "yarn develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "updateBrowserslist": "npx browserslist@latest --update-db updates caniuse-lite"
   },
   "dependencies": {
     "@loadable/component": "^5.14.1",
@@ -51,6 +56,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "babel-esm-plugin": "^0.9.0",
     "babel-preset-gatsby": "^0.5.16",
     "eslint": "^7.12.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -66,6 +72,7 @@
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.13",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.2",
+    "optimize-plugin": "^1.0.0",
     "prettier": "^2.1.2",
     "stylelint": "^13.7.2",
     "stylelint-a11y": "^1.2.3",
@@ -78,7 +85,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "yarn updateBrowserslist && yarn lint-staged"
     }
   },
   "lint-staged": {
