--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn updateBrowserslist && yarn lint-staged"
+      "pre-commit": "yarn lint-staged"
     }
   },
   "lint-staged": {
